parser.output
Terminales no usados en la gramática

    RPROCEDURE
    RID
    THASHTAG
    TDOLLAR
    TUNDERSCORE
    TAPOSTROPHE
    TQMARK
    TEMARK
    TPERCENT
    TQUOTES


Estado 56 conflictos: 15 desplazamiento/reducción
Estado 69 conflictos: 4 desplazamiento/reducción
Estado 70 conflictos: 4 desplazamiento/reducción
Estado 71 conflictos: 4 desplazamiento/reducción
Estado 72 conflictos: 4 desplazamiento/reducción
Estado 73 conflictos: 4 desplazamiento/reducción
Estado 74 conflictos: 4 desplazamiento/reducción
Estado 75 conflictos: 4 desplazamiento/reducción
Estado 76 conflictos: 4 desplazamiento/reducción
Estado 77 conflictos: 4 desplazamiento/reducción
Estado 78 conflictos: 4 desplazamiento/reducción
Estado 79 conflictos: 4 desplazamiento/reducción


Gramática

    0 $accept: start $end

    1 start: RPROGRAM TID TLBRACE statements TRBRACE
    2      | RDEF RMAIN TLPARENTHESIS TRPARENTHESIS mblock

    3 mblock: bl_decl TLBRACE subprogs statements TRBRACE

    4 block: bl_decl TLBRACE statements TRBRACE

    5 bl_decl: RLET decl RIN
    6        | ε

    7 decl: decl TSEMIC id_list TCOLON type
    8     | id_list TCOLON type

    9 id_list: id_list TCOMMA TID
   10        | TID

   11 type: RINT
   12     | RFLOAT

   13 subprogs: subprogs subprog
   14         | ε

   15 subprog: RDEF TID arguments mblock

   16 arguments: TLPARENTHESIS par_list TRPARENTHESIS
   17          | ε

   18 par_list: id_list TCOLON par_class type par_list_r

   19 par_list_r: TSEMIC id_list TCOLON par_class type par_list_r
   20           | ε

   21 par_class: TAMPERSAND
   22          | ε

   23 statements: statements statement
   24           | ε

   25 statement: var_id_array TASSIG expression TSEMIC
   26          | RIF expression block
   27          | RFOREVER block
   28          | RDO block RUNTIL expression RELSE block
   29          | RBREAK RIF expression TSEMIC
   30          | RNEXT TSEMIC
   31          | RREAD TLPARENTHESIS var_id_array TRPARENTHESIS TSEMIC
   32          | RPRINT TLPARENTHESIS expression TRPARENTHESIS TSEMIC

   33 var_id_array: TID

   34 expression: expression TCEQ expression
   35           | expression TCGT expression
   36           | expression TCLT expression
   37           | expression TCGE expression
   38           | expression TCLE expression
   39           | expression TCNE expression
   40           | expression TADD expression
   41           | expression TSUB expression
   42           | expression TMUL expression
   43           | expression TDIVREAL expression
   44           | expression TDIVENT expression
   45           | expression expression
   46           | TID
   47           | TINT_CNST
   48           | TFLOAT_CNST
   49           | TLPARENTHESIS expression TRPARENTHESIS


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    RPROGRAM (258) 1
    RPROCEDURE (259)
    RMAIN (260) 2
    RDEF (261) 2 15
    RLET (262) 5
    RIN (263) 5
    RID (264)
    RINT (265) 11
    RFLOAT (266) 12
    RFOREVER (267) 27
    RIF (268) 26 29
    RDO (269) 28
    RUNTIL (270) 28
    RELSE (271) 28
    RBREAK (272) 29
    RNEXT (273) 30
    RPRINT (274) 32
    RREAD (275) 31
    TLPARENTHESIS (276) 2 16 31 32 49
    TRPARENTHESIS (277) 2 16 31 32 49
    TRBRACE (278) 1 3 4
    TLBRACE (279) 1 3 4
    TASSIG (280) 25
    TSEMIC (281) 7 19 25 29 30 31 32
    THASHTAG (282)
    TDOLLAR (283)
    TUNDERSCORE (284)
    TADD (285) 40
    TSUB (286) 41
    TMUL (287) 42
    TDIVENT (288) 44
    TDIVREAL (289) 43
    TCOLON (290) 7 8 18 19
    TAPOSTROPHE (291)
    TCOMMA (292) 9
    TAMPERSAND (293) 21
    TCEQ (294) 34
    TCNE (295) 39
    TCGE (296) 37
    TCLE (297) 38
    TCGT (298) 35
    TCLT (299) 36
    TQMARK (300)
    TEMARK (301)
    TPERCENT (302)
    TQUOTES (303)
    TID <name> (304) 1 9 10 15 33 46
    TFLOAT_CNST <name> (305) 48
    TINT_CNST <name> (306) 47


No terminales con las reglas donde aparecen

    $accept (52)
        on left: 0
    start (53)
        on left: 1 2
        on right: 0
    mblock (54)
        on left: 3
        on right: 2 15
    block (55)
        on left: 4
        on right: 26 27 28
    bl_decl (56)
        on left: 5 6
        on right: 3 4
    decl (57)
        on left: 7 8
        on right: 5 7
    id_list (58)
        on left: 9 10
        on right: 7 8 9 18 19
    type (59)
        on left: 11 12
        on right: 7 8 18 19
    subprogs (60)
        on left: 13 14
        on right: 3 13
    subprog (61)
        on left: 15
        on right: 13
    arguments (62)
        on left: 16 17
        on right: 15
    par_list (63)
        on left: 18
        on right: 16
    par_list_r (64)
        on left: 19 20
        on right: 18 19
    par_class (65)
        on left: 21 22
        on right: 18 19
    statements <name> (66)
        on left: 23 24
        on right: 1 3 4 23
    statement <name> (67)
        on left: 25 26 27 28 29 30 31 32
        on right: 23
    var_id_array (68)
        on left: 33
        on right: 25 31
    expression <name> (69)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 25 26 28 29 32 34 35 36 37 38 39 40 41 42 43 44 45 49


Estado 0

    0 $accept: • start $end
    1 start: • RPROGRAM TID TLBRACE statements TRBRACE
    2      | • RDEF RMAIN TLPARENTHESIS TRPARENTHESIS mblock

    RPROGRAM  desplazar e ir al estado 1
    RDEF      desplazar e ir al estado 2

    start  ir al estado 3


Estado 1

    1 start: RPROGRAM • TID TLBRACE statements TRBRACE

    TID  desplazar e ir al estado 4


Estado 2

    2 start: RDEF • RMAIN TLPARENTHESIS TRPARENTHESIS mblock

    RMAIN  desplazar e ir al estado 5


Estado 3

    0 $accept: start • $end

    $end  desplazar e ir al estado 6


Estado 4

    1 start: RPROGRAM TID • TLBRACE statements TRBRACE

    TLBRACE  desplazar e ir al estado 7


Estado 5

    2 start: RDEF RMAIN • TLPARENTHESIS TRPARENTHESIS mblock

    TLPARENTHESIS  desplazar e ir al estado 8


Estado 6

    0 $accept: start $end •

    $default  aceptar


Estado 7

    1 start: RPROGRAM TID TLBRACE • statements TRBRACE
   23 statements: • statements statement
   24           | ε •

    $default  reduce usando la regla 24 (statements)

    statements  ir al estado 9


Estado 8

    2 start: RDEF RMAIN TLPARENTHESIS • TRPARENTHESIS mblock

    TRPARENTHESIS  desplazar e ir al estado 10


Estado 9

    1 start: RPROGRAM TID TLBRACE statements • TRBRACE
   23 statements: statements • statement
   25 statement: • var_id_array TASSIG expression TSEMIC
   26          | • RIF expression block
   27          | • RFOREVER block
   28          | • RDO block RUNTIL expression RELSE block
   29          | • RBREAK RIF expression TSEMIC
   30          | • RNEXT TSEMIC
   31          | • RREAD TLPARENTHESIS var_id_array TRPARENTHESIS TSEMIC
   32          | • RPRINT TLPARENTHESIS expression TRPARENTHESIS TSEMIC
   33 var_id_array: • TID

    RFOREVER  desplazar e ir al estado 11
    RIF       desplazar e ir al estado 12
    RDO       desplazar e ir al estado 13
    RBREAK    desplazar e ir al estado 14
    RNEXT     desplazar e ir al estado 15
    RPRINT    desplazar e ir al estado 16
    RREAD     desplazar e ir al estado 17
    TRBRACE   desplazar e ir al estado 18
    TID       desplazar e ir al estado 19

    statement     ir al estado 20
    var_id_array  ir al estado 21


Estado 10

    2 start: RDEF RMAIN TLPARENTHESIS TRPARENTHESIS • mblock
    3 mblock: • bl_decl TLBRACE subprogs statements TRBRACE
    5 bl_decl: • RLET decl RIN
    6        | ε •  [TLBRACE]

    RLET  desplazar e ir al estado 22

    $default  reduce usando la regla 6 (bl_decl)

    mblock   ir al estado 23
    bl_decl  ir al estado 24


Estado 11

    4 block: • bl_decl TLBRACE statements TRBRACE
    5 bl_decl: • RLET decl RIN
    6        | ε •  [TLBRACE]
   27 statement: RFOREVER • block

    RLET  desplazar e ir al estado 22

    $default  reduce usando la regla 6 (bl_decl)

    block    ir al estado 25
    bl_decl  ir al estado 26


Estado 12

   26 statement: RIF • expression block
   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 31


Estado 13

    4 block: • bl_decl TLBRACE statements TRBRACE
    5 bl_decl: • RLET decl RIN
    6        | ε •  [TLBRACE]
   28 statement: RDO • block RUNTIL expression RELSE block

    RLET  desplazar e ir al estado 22

    $default  reduce usando la regla 6 (bl_decl)

    block    ir al estado 32
    bl_decl  ir al estado 26


Estado 14

   29 statement: RBREAK • RIF expression TSEMIC

    RIF  desplazar e ir al estado 33


Estado 15

   30 statement: RNEXT • TSEMIC

    TSEMIC  desplazar e ir al estado 34


Estado 16

   32 statement: RPRINT • TLPARENTHESIS expression TRPARENTHESIS TSEMIC

    TLPARENTHESIS  desplazar e ir al estado 35


Estado 17

   31 statement: RREAD • TLPARENTHESIS var_id_array TRPARENTHESIS TSEMIC

    TLPARENTHESIS  desplazar e ir al estado 36


Estado 18

    1 start: RPROGRAM TID TLBRACE statements TRBRACE •

    $default  reduce usando la regla 1 (start)


Estado 19

   33 var_id_array: TID •

    $default  reduce usando la regla 33 (var_id_array)


Estado 20

   23 statements: statements statement •

    $default  reduce usando la regla 23 (statements)


Estado 21

   25 statement: var_id_array • TASSIG expression TSEMIC

    TASSIG  desplazar e ir al estado 37


Estado 22

    5 bl_decl: RLET • decl RIN
    7 decl: • decl TSEMIC id_list TCOLON type
    8     | • id_list TCOLON type
    9 id_list: • id_list TCOMMA TID
   10        | • TID

    TID  desplazar e ir al estado 38

    decl     ir al estado 39
    id_list  ir al estado 40


Estado 23

    2 start: RDEF RMAIN TLPARENTHESIS TRPARENTHESIS mblock •

    $default  reduce usando la regla 2 (start)


Estado 24

    3 mblock: bl_decl • TLBRACE subprogs statements TRBRACE

    TLBRACE  desplazar e ir al estado 41


Estado 25

   27 statement: RFOREVER block •

    $default  reduce usando la regla 27 (statement)


Estado 26

    4 block: bl_decl • TLBRACE statements TRBRACE

    TLBRACE  desplazar e ir al estado 42


Estado 27

   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS
   49           | TLPARENTHESIS • expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 43


Estado 28

   46 expression: TID •

    $default  reduce usando la regla 46 (expression)


Estado 29

   48 expression: TFLOAT_CNST •

    $default  reduce usando la regla 48 (expression)


Estado 30

   47 expression: TINT_CNST •

    $default  reduce usando la regla 47 (expression)


Estado 31

    4 block: • bl_decl TLBRACE statements TRBRACE
    5 bl_decl: • RLET decl RIN
    6        | ε •  [TLBRACE]
   26 statement: RIF expression • block
   34 expression: • expression TCEQ expression
   34           | expression • TCEQ expression
   35           | • expression TCGT expression
   35           | expression • TCGT expression
   36           | • expression TCLT expression
   36           | expression • TCLT expression
   37           | • expression TCGE expression
   37           | expression • TCGE expression
   38           | • expression TCLE expression
   38           | expression • TCLE expression
   39           | • expression TCNE expression
   39           | expression • TCNE expression
   40           | • expression TADD expression
   40           | expression • TADD expression
   41           | • expression TSUB expression
   41           | expression • TSUB expression
   42           | • expression TMUL expression
   42           | expression • TMUL expression
   43           | • expression TDIVREAL expression
   43           | expression • TDIVREAL expression
   44           | • expression TDIVENT expression
   44           | expression • TDIVENT expression
   45           | • expression expression
   45           | expression • expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    RLET           desplazar e ir al estado 22
    TLPARENTHESIS  desplazar e ir al estado 27
    TADD           desplazar e ir al estado 44
    TSUB           desplazar e ir al estado 45
    TMUL           desplazar e ir al estado 46
    TDIVENT        desplazar e ir al estado 47
    TDIVREAL       desplazar e ir al estado 48
    TCEQ           desplazar e ir al estado 49
    TCNE           desplazar e ir al estado 50
    TCGE           desplazar e ir al estado 51
    TCLE           desplazar e ir al estado 52
    TCGT           desplazar e ir al estado 53
    TCLT           desplazar e ir al estado 54
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    $default  reduce usando la regla 6 (bl_decl)

    block       ir al estado 55
    bl_decl     ir al estado 26
    expression  ir al estado 56


Estado 32

   28 statement: RDO block • RUNTIL expression RELSE block

    RUNTIL  desplazar e ir al estado 57


Estado 33

   29 statement: RBREAK RIF • expression TSEMIC
   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 58


Estado 34

   30 statement: RNEXT TSEMIC •

    $default  reduce usando la regla 30 (statement)


Estado 35

   32 statement: RPRINT TLPARENTHESIS • expression TRPARENTHESIS TSEMIC
   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 59


Estado 36

   31 statement: RREAD TLPARENTHESIS • var_id_array TRPARENTHESIS TSEMIC
   33 var_id_array: • TID

    TID  desplazar e ir al estado 19

    var_id_array  ir al estado 60


Estado 37

   25 statement: var_id_array TASSIG • expression TSEMIC
   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 61


Estado 38

   10 id_list: TID •

    $default  reduce usando la regla 10 (id_list)


Estado 39

    5 bl_decl: RLET decl • RIN
    7 decl: decl • TSEMIC id_list TCOLON type

    RIN     desplazar e ir al estado 62
    TSEMIC  desplazar e ir al estado 63


Estado 40

    8 decl: id_list • TCOLON type
    9 id_list: id_list • TCOMMA TID

    TCOLON  desplazar e ir al estado 64
    TCOMMA  desplazar e ir al estado 65


Estado 41

    3 mblock: bl_decl TLBRACE • subprogs statements TRBRACE
   13 subprogs: • subprogs subprog
   14         | ε •

    $default  reduce usando la regla 14 (subprogs)

    subprogs  ir al estado 66


Estado 42

    4 block: bl_decl TLBRACE • statements TRBRACE
   23 statements: • statements statement
   24           | ε •

    $default  reduce usando la regla 24 (statements)

    statements  ir al estado 67


Estado 43

   34 expression: • expression TCEQ expression
   34           | expression • TCEQ expression
   35           | • expression TCGT expression
   35           | expression • TCGT expression
   36           | • expression TCLT expression
   36           | expression • TCLT expression
   37           | • expression TCGE expression
   37           | expression • TCGE expression
   38           | • expression TCLE expression
   38           | expression • TCLE expression
   39           | • expression TCNE expression
   39           | expression • TCNE expression
   40           | • expression TADD expression
   40           | expression • TADD expression
   41           | • expression TSUB expression
   41           | expression • TSUB expression
   42           | • expression TMUL expression
   42           | expression • TMUL expression
   43           | • expression TDIVREAL expression
   43           | expression • TDIVREAL expression
   44           | • expression TDIVENT expression
   44           | expression • TDIVENT expression
   45           | • expression expression
   45           | expression • expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS
   49           | TLPARENTHESIS expression • TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TRPARENTHESIS  desplazar e ir al estado 68
    TADD           desplazar e ir al estado 44
    TSUB           desplazar e ir al estado 45
    TMUL           desplazar e ir al estado 46
    TDIVENT        desplazar e ir al estado 47
    TDIVREAL       desplazar e ir al estado 48
    TCEQ           desplazar e ir al estado 49
    TCNE           desplazar e ir al estado 50
    TCGE           desplazar e ir al estado 51
    TCLE           desplazar e ir al estado 52
    TCGT           desplazar e ir al estado 53
    TCLT           desplazar e ir al estado 54
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 56


Estado 44

   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   40           | expression TADD • expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 69


Estado 45

   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   41           | expression TSUB • expression
   42           | • expression TMUL expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 70


Estado 46

   34 expression: • expression TCEQ expression
   35           | • expression TCGT expression
   36           | • expression TCLT expression
   37           | • expression TCGE expression
   38           | • expression TCLE expression
   39           | • expression TCNE expression
   40           | • expression TADD expression
   41           | • expression TSUB expression
   42           | • expression TMUL expression
   42           | expression TMUL • expression
   43           | • expression TDIVREAL expression
   44           | • expression TDIVENT expression
   45           | • expression expression
   46           | • TID
   47           | • TINT_CNST
   48           | • TFLOAT_CNST
   49           | • TLPARENTHESIS expression TRPARENTHESIS

    TLPARENTHESIS  desplazar e ir al estado 27
    TID            desplazar e ir al estado 28
    TFLOAT_CNST    desplazar e ir al estado 29
    TINT_CNST      desplazar e ir al estado 30

    expression  ir al estado 71


Estado 47
